# OTUS_C-_base_test

./: README.md
Hello world/: CMakeLists.txt
Homework03/: CMakeLists.txt  check_value.cpp  check_value.h  guess_the_number.cpp  high_scores.cpp  high_scores.h  high_scores.txt  levels.cpp  levels.h  random_value.cpp  random_value.h
Homework04/include/: add.hpp  astnode.hpp  div.hpp  lexer.hpp  mul.hpp  number.hpp  parser.hpp  sub.hpp  variable.hpp
Homework04/src/: astnode.cpp  lexer.cpp  main.cpp  parser.cpp
Homework05/: CMakeLists.txt  statistics.cpp
Homework05/included/: max.hpp  mean.hpp  min.hpp  pct90.hpp  stdclass.hpp
Homework05/src/: pct90.cpp  stdclass.cpp
Homework06/: CMakeLists.txt  array.cpp  array.hpp  container.hpp  list.cpp  main.cpp
Homework06/include/: array.hpp  container.hpp  list.hpp
Homework07/: CMakeLists.txt  containerChecks.cpp
Homework07/gtests/: CMakeLists.txt  array_tests.cpp  list_tests.cpp
Homework07/include/: array.hpp  list.hpp  test.h  testprint.lib
Homework08/: CMakeLists.txt  topk_words.cpp  waiting_queue.h
